Логика с ролями полностью внедрена
